src/test/deca/syntax/invalid/CircularInclude1.decah
#include "CircularInclude2.decah"